--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,20 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@article{mirjalili2023resilience,
+  title={Resilience analysis of New York City transportation network after snow storms},
+  author={Mirjalili, Reza and Barati, Hojjat and Yazici, Anil},
+  journal={Transportation research record},
+  volume={2677},
+  number={1},
+  pages={694--707},
+  year={2023},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+@article{park2022scheduling,
+  title={Scheduling diagnostic testing kit deliveries with the mothership and drone routing problem},
+  author={Park, Hyung Jin and Mirjalili, Reza and C{\^o}t{\'e}, Murray J and Lim, Gino J},
+  journal={Journal of Intelligent \& Robotic Systems},
+  volume={105},
+  number={2},
+  pages={38},
+  year={2022},
+  publisher={Springer}
 }
